[gd_scene load_steps=10 format=3 uid="uid://d387tdcf06t3o"]

[ext_resource type="Texture2D" uid="uid://cblvulfyqsl8w" path="res://project/GameManager/background.png" id="1_0ico7"]
[ext_resource type="Script" path="res://project/menus/game_over.gd" id="1_16jyf"]
[ext_resource type="FontFile" uid="uid://rcj2rq8sxetw" path="res://project/font.ttf" id="2_q2edd"]
[ext_resource type="Texture2D" uid="uid://by4f1p211he7x" path="res://project/items/item_ABC.png" id="3_metkc"]
[ext_resource type="Texture2D" uid="uid://bb0c7abh58qk0" path="res://project/menus/menu_button_up.png" id="4_krbys"]
[ext_resource type="Texture2D" uid="uid://dmox73k7gq88q" path="res://project/menus/menu_button_down.png" id="5_vdstl"]
[ext_resource type="AudioStream" uid="uid://xq28fvum4an2" path="res://project/audio/click.wav" id="7_mi1cj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_klfq2"]
texture = ExtResource("1_0ico7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_7g4fa"]
sources/0 = SubResource("TileSetAtlasSource_klfq2")

[node name="GameOver" type="Node2D"]
script = ExtResource("1_16jyf")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_7g4fa")
format = 2
layer_0/tile_data = PackedInt32Array(8, 131072, 2, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 4, 65536, 0, 3, 65536, 0, 2, 65536, 0, 1, 65536, 0, 0, 131072, 0, 983048, 65536, 2, 983047, 0, 1, 983046, 0, 1, 983045, 0, 1, 983044, 0, 1, 983043, 0, 1, 983042, 0, 1, 983041, 0, 1, 983040, 0, 2, 917512, 0, 0, 851976, 0, 0, 786440, 0, 0, 720904, 0, 0, 655368, 0, 0, 589832, 0, 0, 524296, 0, 0, 458760, 0, 0, 393224, 0, 0, 393223, 131072, 1, 327687, 131072, 0, 262151, 131072, 0, 196615, 131072, 0, 131079, 131072, 1, 131080, 0, 0, 65544, 0, 0, 327688, 0, 0, 262152, 0, 0, 196616, 0, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 655360, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 851968, 131072, 0, 917504, 131072, 0, 917505, 131072, 1, 917506, 65536, 0, 917507, 65536, 0, 917508, 65536, 0, 917509, 65536, 0, 917510, 65536, 0, 917511, 131072, 1, 851975, 131072, 0, 851974, 65536, 1, 851973, 65536, 1, 851972, 65536, 1, 851971, 65536, 1, 851970, 65536, 1, 851969, 0, 0, 786433, 0, 0, 786434, 65536, 1, 786435, 65536, 1, 786436, 65536, 1, 786437, 65536, 1, 786438, 65536, 1, 720902, 0, 1, 720903, 131072, 1, 655367, 131072, 1, 655366, 131072, 1, 655365, 131072, 1, 720901, 0, 1, 786439, 131072, 0, 589831, 131072, 1, 524295, 131072, 1, 458759, 131072, 1, 65543, 131072, 1, 65542, 131072, 1, 65541, 131072, 1, 65540, 131072, 1, 65539, 131072, 1, 65538, 131072, 1, 65537, 131072, 1, 131073, 131072, 1, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 131072, 1, 458753, 131072, 1, 524289, 131072, 1, 589825, 131072, 1, 655361, 131072, 1, 720897, 131072, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 655364, 131072, 1, 655363, 131072, 1, 589827, 131072, 1, 589826, 131072, 1, 655362, 131072, 1, 589829, 131072, 1, 589830, 131072, 1, 524294, 131072, 1, 458758, 131072, 1, 458757, 131072, 1, 393221, 65536, 0, 393220, 65536, 0, 393219, 65536, 0, 458755, 131072, 1, 524291, 131072, 1, 589828, 131072, 1, 524293, 131072, 1, 458756, 131072, 1, 524292, 131072, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 196614, 65536, 1, 262150, 65536, 1, 327686, 65536, 1, 393222, 65536, 0, 196612, 65536, 1, 196611, 65536, 1, 262147, 65536, 1, 262148, 65536, 1, 262149, 65536, 1, 196613, 65536, 1, 327683, 65536, 1, 196610, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 0, 458754, 131072, 1, 524290, 131072, 1, 327684, 65536, 1, 327685, 65536, 1)

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 111.0
offset_top = 137.0
offset_right = 327.0
offset_bottom = 300.0
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 64
text = "Game
Over"
horizontal_alignment = 1

[node name="Score" type="Node" parent="."]

[node name="ScoreTitle" type="Label" parent="Score"]
offset_left = 165.0
offset_top = 330.0
offset_right = 273.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 32
text = "Score
"

[node name="ScoreSprite" type="Sprite2D" parent="Score"]
position = Vector2(171, 396)
scale = Vector2(3, 3)
texture = ExtResource("3_metkc")

[node name="ScoreLabel" type="Label" parent="Score"]
offset_left = 211.0
offset_top = 378.0
offset_right = 271.0
offset_bottom = 418.0
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 32
text = "x 0"

[node name="HighScoreTitle" type="Label" parent="Score"]
offset_left = 118.0
offset_top = 446.0
offset_right = 322.0
offset_bottom = 486.0
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 32
text = "High score"

[node name="HighScoreSprite" type="Sprite2D" parent="Score"]
position = Vector2(174, 517)
scale = Vector2(3, 3)
texture = ExtResource("3_metkc")

[node name="HighScoreLabel" type="Label" parent="Score"]
offset_left = 211.0
offset_top = 497.0
offset_right = 271.0
offset_bottom = 537.0
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 32
text = "x 0"

[node name="NewHighScoreLabel" type="Label" parent="Score"]
offset_left = 313.0
offset_top = 430.0
offset_right = 373.0
offset_bottom = 470.0
rotation = 0.523599
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 16
text = "New!"

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 110.0
offset_top = 575.0
offset_right = 216.0
offset_bottom = 624.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_krbys")
texture_pressed = ExtResource("5_vdstl")

[node name="PlayAgainLabel" type="Label" parent="."]
offset_left = 166.0
offset_top = 582.0
offset_right = 274.0
offset_bottom = 665.0
theme_override_fonts/font = ExtResource("2_q2edd")
theme_override_font_sizes/font_size = 32
text = "Play
Again"
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_mi1cj")
volume_db = 24.0
